--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dist/index.js",
     "dist/index.d.ts"
   ],
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "typings": "dist/index.d.ts",
   "author": "istrib",
   "license": "MIT",
